setup test client

--- a/client/test/runner.html
+++ b/client/test/runner.html
@@ -4,6 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="../components/mocha/mocha.css"></link>
 	</head>
 	<body>
+		<div id="mocha"></div>
 		<script src= "../components/mocha/mocha.js"></script>
 		<script src= "../components/chai/chai.js"></script>
 		<script>
