setup test client

--- a/client/test/runner.html
+++ b/client/test/runner.html
@@ -5,6 +5,9 @@
 	</head>
 	<body>
 		<div id="mocha"></div>
+		<div id="message"></div>
+		<div id="fixtures"></div>
+
 		<script src= "../components/mocha/mocha.js"></script>
 		<script src= "../components/chai/chai.js"></script>
 		<script>
