--- a/client/test/runner.html
+++ b/client/test/runner.html
@@ -17,12 +17,15 @@
 
 		<!-- Libraries -->
 		<script src= "../components/angular/angular.js"></script>
+		<script src= "../components/angular-mocks/angular-mocks.js"></script>
 
 		<!-- Source -->
 		<script src= "../js/app.js"></script>
+		<script src= "../js/directives/google-login.js"></script>
 
 		<!-- Specs -->
 		<script src= "app.js"></script>
+		<script src= "directives/google-login.js"></script>
 
 		<script>
 			//in modo che quando eseguo il test con il browser tutto funzioni correttamente
