--- a/client/index.html
+++ b/client/index.html
@@ -1,1 +1,33 @@
-Hello world!!
+<!doctype html>
+<html>
+	<head>
+		<title>Remote Storage</title>
+	</head>
+	<body ng-app = "remoteStorageApp">
+		<rs-google-login 
+			current-user="username" 
+			client-id="964626608963-i4ihb9fpku3uc4lsi37v7s42e5vm6ikv.apps.googleusercontent.com">
+		</rs-google-login>
+
+		<button
+			ng-if = "!username.userDetails"
+			ng-disabled = "!username.readyToSignIn"
+			ng-click = "username.doSignIn()"
+		>
+		Login con G+
+		</button>
+
+		<p ng-if ="username.userDetails">
+			Benvenuto {{username.userDetails.displayName}}
+		</p>
+
+		<p	ng-if = "username.errorMessage">
+			Errore: {{username.errorMessage}}
+		</p>
+
+		<script src="components/angular/angular.js"></script>
+		<script src="js/app.js"></script>
+		<script src="js/directives/google-login.js"></script>
+
+	</body>
+</html>
