--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Remote Storage</title>
+		<link rel="stylesheet" type="text/css" href="css/app.css">
 	</head>
 	<body ng-app = "remoteStorageApp">
 		<rs-google-login 
@@ -9,22 +10,28 @@
 			client-id="964626608963-i4ihb9fpku3uc4lsi37v7s42e5vm6ikv.apps.googleusercontent.com">
 		</rs-google-login>
 
-		<button
-			ng-if = "!username.userDetails"
-			ng-disabled = "!username.readyToSignIn"
-			ng-click = "username.doSignIn()"
-		>
-		Login con G+
-		</button>
+		<div class="container">
+			<div class="header">
+				<div class="login-box">
+					<button
+						ng-if = "!username.userDetails"
+						ng-disabled = "!username.readyToSignIn"
+						ng-click = "username.doSignIn()"
+					>
+					Login con G+
+					</button>
 
-		<p ng-if ="username.userDetails">
-			Benvenuto {{username.userDetails.displayName}}
-		</p>
+					<p ng-if ="username.userDetails">
+						Benvenuto {{username.userDetails.displayName}}
+					</p>
 
-		<p	ng-if = "username.errorMessage">
-			Errore: {{username.errorMessage}}
-		</p>
-
+					<p	ng-if = "username.errorMessage">
+						Errore: {{username.errorMessage}}
+					</p>
+				</div>
+			</div>
+		</div>
+		
 		<script src="components/angular/angular.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/directives/google-login.js"></script>
