--- a/client/test/runner.html
+++ b/client/test/runner.html
@@ -22,10 +22,12 @@
 		<!-- Source -->
 		<script src= "../js/app.js"></script>
 		<script src= "../js/directives/google-login.js"></script>
+		<script src= "../js/controlles/file-list.js"></script>
 
 		<!-- Specs -->
 		<script src= "app.js"></script>
 		<script src= "directives/google-login.js"></script>
+		<script src= "controlles/file-list.js"></script>
 
 		<script>
 			//in modo che quando eseguo il test con il browser tutto funzioni correttamente
