--- a/client/test/runner.html
+++ b/client/test/runner.html
@@ -18,16 +18,18 @@
 		<!-- Libraries -->
 		<script src= "../components/angular/angular.js"></script>
 		<script src= "../components/angular-mocks/angular-mocks.js"></script>
+		<script src= "../components/angular-resource/angular-resource.js"></script>
 
 		<!-- Source -->
 		<script src= "../js/app.js"></script>
 		<script src= "../js/directives/google-login.js"></script>
-		<script src= "../js/controlles/file-list.js"></script>
+		<script src= "../js/controllers/file-list.js"></script>
 
 		<!-- Specs -->
 		<script src= "app.js"></script>
 		<script src= "directives/google-login.js"></script>
-		<script src= "controlles/file-list.js"></script>
+		<script src= "controllers/file-list.js"></script>
+		<script src= "resources/file.js"></script>
 
 		<script>
 			//in modo che quando eseguo il test con il browser tutto funzioni correttamente
