creazione resource file

--- a/client/test/runner.html
+++ b/client/test/runner.html
@@ -24,6 +24,7 @@
 		<script src= "../js/app.js"></script>
 		<script src= "../js/directives/google-login.js"></script>
 		<script src= "../js/controllers/file-list.js"></script>
+		<script src= "../js/resources/file.js"></script>
 
 		<!-- Specs -->
 		<script src= "app.js"></script>
