--- a/client-dist/index.html
+++ b/client-dist/index.html
@@ -2,9 +2,7 @@
 <html>
 	<head>
 		<title>Remote Storage</title>
-		<!-- build:[href] /-->		
-		<link rel="stylesheet" type="text/css" href="css/app.css">
-		<!-- /build -->
+		<link rel="stylesheet" type="text/css" href="/app.css">
 	</head>
 	<body ng-app = "remoteStorageApp">
 		<rs-google-login 
@@ -33,16 +31,7 @@
 				</div>
 			</div>
 		</div>
-		
-		<!-- build:remove -->
-		<script src="components/angular/angular.js"></script>
-		<script src="components/angular-resource/angular-resource.js"></script>
-		<script src="js/app.js"></script>
-		<script src="js/directives/google-login.js"></script>
-		<!-- /build -->
 
-		<!-- build:template
 		<script src="/app.js"></script>
-		 /build -->
 	</body>
 </html>
